<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".GifAddActivity">

    <Button
        android:id="@+id/GifUploadBtn"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_marginBottom="120dp"
        android:background="#FF6D00"
        android:contentDescription="@string/Gif_Upload_Btn"
        android:text="@string/UploadButton"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AddTopicTextGif"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/Topic_Hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GifPickBtn" />

    <ProgressBar
        android:id="@+id/GifUploadProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GifPickBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="132dp"
        android:background="#B0BEC5"
        android:text="@string/PickGif"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/GifUploadImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GifUploadProgress" />

    <ImageView
        android:id="@+id/GifUploadImg"
        android:layout_width="341dp"
        android:layout_height="287dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/Gif_Upload_Image"
        app:layout_constraintBottom_toTopOf="@+id/AddTopicTextGif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorPrimary" />

</android.support.constraint.ConstraintLayout>